# django-simple-catalog

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
.make/conf.d/: django.mk  tests.mk
django_simple_catalog/: __init__.py  admin.py  app_settings.py  apps.py  context_processors.py  models.py  urls.py  views.py
django_simple_catalog/migrations/: 0001_initial.py  0002_sitesettings_category_description_product.py  0003_product_active_alter_product_short_description.py  0004_alter_product_category_alter_product_image.py  0005_category_order_alter_product_image_and_more.py
django_simple_catalog/static/django_simple_catalog/css/: style.css
django_simple_catalog/templates/django_simple_catalog/: base.html  category.html  index.html
django_simple_catalog/templates/django_simple_catalog/partials/: navbar.html  product_card.html
django_simple_catalog/tests/: test_tasks.py
testproject/: asgi.py  settings.py  urls.py  wsgi.py
