[build-system]
build-backend = "flit_core.buildapi"

requires = [ "flit-core>=3.2,<4" ]

[project]
name = "django-simple-catalog"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "John Doe", email = "john.doe@example.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "description", "version" ]
dependencies = [
    "django>=5.2",
    "mysqlclient>=2.2.7",
    "pillow>=11.1",
]

urls.Changelog = "https://gitlab.com/lawn-alliance/django-simple-catalog/-/blob/master/CHANGELOG.md"
urls.Documentation = "https://gitlab.com/lawn-alliance/django-simple-catalog/-/blob/master/README.md"
urls.Homepage = "https://gitlab.com/lawn-alliance/django-simple-catalog"
urls.Source = "https://gitlab.com/lawn-alliance/django-simple-catalog"
urls.Tracker = "https://gitlab.com/lawn-alliance/django-simple-catalog/-/issues"

[tool.flit.module]
name = "django_simple_catalog"

[tool.isort]
profile = "black"
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_django = [ "django" ]
import_heading_stdlib = "Standard Library"
import_heading_django = "Django"
import_heading_firstparty = "Django Simple Catalog"
import_heading_thirdparty = "Third Party"

[tool.flake8]
exclude = [ ".git", "*migrations*", ".tox", "dist", "htmlcov" ]
max-line-length = 119
select = [ "C", "E", "F", "W", "B", "B950" ]
ignore = [ 'E203', 'E231', 'E501', 'W503', 'W291', 'W293' ]

[tool.pylint.'MASTER']
ignore-patterns = [ "__init__.py", "apps.py", "admin.py", "runtests.py" ]
ignore-paths = [ "testauth/", "^.*/tests/.*$", "^.*/migrations/.*$" ]

[tool.pylint.'BASIC']
good-names = [ "i", "j", "k", "ex" ]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "cyclic-import",
    "fixme",
    "wrong-import-position",
    "import-error",
    "protected-access",
    "ungrouped-imports",
    "too-few-public-methods",
]
